Possible fix
Made documentation-nav have a max-height of 100vh - 220. The 220 pixels are to account for the topbar, the banner and the searchbar. The only problem is when you scroll the banner out of view the sidebar could be longer. Should probably add media queries.

--- a/src/less/themes/documentation.less
+++ b/src/less/themes/documentation.less
@@ -38,6 +38,8 @@
 
     .documentation-nav {
         padding: @base-padding;
+        height: calc(100vh - 220px);
+        overflow-y: auto;
 
         .nav-group {
             margin-bottom: @base-margin;
